# tetris-ai-learning

./: .gitignore  .gitmodules  PROJECT_SCOPE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
models/: tetris_value_best_summary.json
models_old/: tetris_value_best.keras  tetris_value_final.keras
src/data/: dataset_format.md
src/env/: tetris_env.py
src/training/: collect_imitation.py  evaluate_dqn.py  features.py  model.py  play_dqn.py  state_utils.py  train_dqn.py  watch_ai.py
src/utils/: encoding.py
tests/: test_env_smoke.py
